Fix trade
Изменил шрифт в некоторых местах, исправил размеры иконок (основные). Также сделал hover эффект для кнопок, и поставил background-color для scrollbar. Все фиксы по просьбе martini.

--- a/src/features/animList_HIVE/styles.sass
+++ b/src/features/animList_HIVE/styles.sass
@@ -32,7 +32,7 @@ $transition--default: .3s
   div::-webkit-scrollbar
     width: 3px
   
-    background-color: transparent
+    background-color: rgba(138, 138, 138, .3)
 
   div::-webkit-scrollbar-thumb
     background-color: #737373
