--- a/src/main.sass
+++ b/src/main.sass
@@ -27,3 +27,7 @@
 @font-face
   font-family: Futura-pt CM
   src: url('./fonts/futura-pt-cond-medium.ttf')
+
+@font-face
+  font-family: Futura-pt CB
+  src: url('./fonts/futura-pt-cond-book.ttf')
